fix spacing and alignment

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -10,10 +10,14 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
 }
 
 .group {
   display: flex;
+  gap: 52px;
+  padding: 32px;
 }
 
 
